# oigen

./: .gitignore  LICENSE  README.md  __init__.py  pyproject.toml
src/: debug.py  error.py  gen.py  types.py
src/oigen/: __init__.py  gen.py  something-wrong.md
src/oigen/debug/: __init__.py  main.py
src/oigen/errors/: __init__.py  exception.py
src/oigen/oitypes/: __init__.py
src/oigen/values/: __init__.py  randset.py  randvar.py
values/: __init__.py  values.py
