[tool.poetry]
name = "oigen"
version = "0.1.0"
description = "Data Generator for OI."
authors = ["OmangoItai <43400357+OmangoItai@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

packages = [
    { include = "oigen", from = "src" },  ##
]

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
rich = "^13.9.4"
inquirerpy = "^0.3.4"

[tool.poetry.group.dev.dependencies]
pylint = "^3.3.4"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"